htmlek törlése login.js register.js home.js App.js átírás

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -1,143 +1,11 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <link rel="icon" type="image/x-icon" href="assets/images/gb-logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bejelentkezés és Regisztráció</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-            text-align: center;
-        }
-
-        .form-container {
-            display: flex;
-            flex-direction: column;
-        }
-
-        h2 {
-            margin-bottom: 20px;
-        }
-
-        input {
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        button {
-            padding: 10px;
-            background-color: #28a745;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #218838;
-        }
-
-        p {
-            margin-top: 10px;
-        }
-
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Go Bicikli</title>
 </head>
 <body>
-    <div class="container">
-        <div id="login-form" class="form-container">
-            <h2>Bejelentkezés</h2>
-            <form id="login">
-                <input type="text" id="login-username" placeholder="Felhasználónév" required>
-                <input type="password" id="login-password" placeholder="Jelszó" required>
-                <button type="submit">Bejelentkezés</button>
-            </form>
-            <p>Nincs még fiókod? <a href="#" id="show-register">Regisztrálj itt!</a></p>
-        </div>
-
-        <div id="register-form" class="form-container" style="display: none;">
-            <h2>Regisztráció</h2>
-            <form id="register">
-                <input type="text" id="register-username" placeholder="Felhasználónév" required>
-                <input type="text" id="full-name" placeholder="Teljes név" required>
-                <input type="password" id="register-password" placeholder="Jelszó" required>
-                <input type="password" id="confirm-password" placeholder="Jelszó megerősítése" required>
-                <button type="submit">Regisztrálás</button>
-            </form>
-            <p>Már van fiókod? <a href="#" id="show-login">Jelentkezz be itt!</a></p>
-        </div>
-    </div>
-
-    <script>
-        // Átváltás a regisztrációra
-        document.getElementById('show-register').addEventListener('click', function(event) {
-            event.preventDefault();
-            document.getElementById('login-form').style.display = 'none';
-            document.getElementById('register-form').style.display = 'block';
-        });
-
-        // Átváltás a bejelentkezésre
-        document.getElementById('show-login').addEventListener('click', function(event) {
-            event.preventDefault();
-            document.getElementById('register-form').style.display = 'none';
-            document.getElementById('login-form').style.display = 'block';
-        });
-
-        // Regisztráció beküldése
-        document.getElementById('register').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const username = document.getElementById('register-username').value;
-            const password = document.getElementById('register-password').value;
-
-            // A felhasználónevet és jelszót tároljuk a localStorage-ban 
-            localStorage.setItem(username, password);
-            alert('Sikeres regisztráció! Most már be tudsz jelentkezni.');
-            document.getElementById('register-form').style.display = 'none';
-            document.getElementById('login-form').style.display = 'block';
-        });
-
-        // Bejelentkezés beküldése
-        document.getElementById('login').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const username = document.getElementById('login-username').value;
-            const password = document.getElementById('login-password').value;
-
-            // A tárolt jelszó lekérése a localStorage-ból
-            const storedPassword = localStorage.getItem(username);
-
-            if (storedPassword === password) {
-                alert('Sikeres bejelentkezés!');
-                // Átirányítás az home.html oldalra
-                window.location.href = 'home.html';
-            } else {
-                alert('Érvénytelen felhasználónév vagy jelszó!');
-            }
-        });
-    </script>
+    <div id="root"></div> <!-- React itt renderel -->
 </body>
 </html>
