Add .gitignore, integrate Bootstrap, and refactor routing in components

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -6,6 +6,6 @@
     <title>Go Bicikli</title>
 </head>
 <body>
-    <div id="root"></div> <!-- React itt renderel -->
+    <div id="root"></div>
 </body>
 </html>
